composer: use tagged icinga-api, linux-health

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "ext-openssl": "*",
     "ext-pcntl": "*",
     "clue/mq-react": "dev-master",
-    "gipfl/icinga-api": "@dev",
-    "gipfl/linux-health": "dev-master",
+    "gipfl/icinga-api": ">=0.2",
+    "gipfl/linux-health": ">=0.2",
     "gipfl/log": ">=0.2",
     "gipfl/redis-lua": "@dev",
     "gipfl/rrdtool": "dev-master",
