--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "imedge/metrics-feature",
+  "type": "project",
   "config": {
     "sort-packages": true
   },
@@ -7,31 +9,6 @@
       "IMEdge\\MetricsFeature\\": "src"
     }
   },
-  "repositories": [{
-    "url": "../../../gipfl-libs/icinga-perf-data",
-    "type": "path",
-    "options": {
-      "symlink": true
-    }
-  }, {
-    "url": "../../../gipfl-libs/rrdtool",
-    "type": "path",
-    "options": {
-      "symlink": true
-    }
-  }, {
-    "url": "../../../gipfl-libs/protocol-jsonrpc",
-    "type": "path",
-    "options": {
-      "symlink": true
-    }
-  }, {
-    "url": "../../../gipfl-libs/icinga-api",
-    "type": "path",
-    "options": {
-      "symlink": true
-    }
-  }],
   "require": {
     "php": ">=8.1",
     "ext-ctype": "*",
@@ -42,16 +19,11 @@
     "ext-pdo": "*",
     "ext-posix": "*",
     "gipfl/data-type": ">=0.2",
-    "gipfl/icinga-api": "@dev",
-    "gipfl/icinga-perf-data": "@dev",
+    "imedge/icinga-perf-data": ">=0.2",
     "gipfl/json": ">=0.2",
     "gipfl/linux-health": ">=0.2",
     "gipfl/log": ">=0.7",
-    "gipfl/process": ">=0.5",
-    "gipfl/protocol-jsonrpc": "@dev",
-    "gipfl/protocol-netstring": ">=0.1.1",
-    "gipfl/rrdtool": "@dev",
-    "gipfl/stream": "^0",
+    "gipfl/rrdtool": ">=0.2",
     "ramsey/uuid": "^4",
     "react/event-loop": "^1.2"
   }
