src, composer: use imedge/json

--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "ext-pdo": "*",
     "ext-posix": "*",
     "gipfl/data-type": ">=0.2",
-    "gipfl/json": ">=0.2",
     "gipfl/linux-health": ">=0.2",
     "gipfl/log": ">=0.7",
     "imedge/icinga-perf-data": ">=0.4",
+    "imedge/json": ">=0.1",
     "imedge/rrd-graph-info": ">=0.3",
     "imedge/rrd-structure": ">=0.4",
     "imedge/rrdcached": ">=0.3",
