src, composer: use imedge/config

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "ext-pcntl": "*",
     "ext-pdo": "*",
     "ext-posix": "*",
-    "gipfl/data-type": ">=0.2",
     "gipfl/linux-health": ">=0.2",
     "gipfl/log": ">=0.7",
+    "imedge/config": ">=0.1",
     "imedge/icinga-perf-data": ">=0.4",
     "imedge/json": ">=0.1",
     "imedge/rrd-graph-info": ">=0.3",
