--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,11 @@
     "imedge/rrd-structure": ">=0.4",
     "imedge/rrdcached": ">=0.4",
     "ramsey/uuid": "^4"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^1.10 | ^2",
+    "phpunit/phpunit": "^10.3",
+    "squizlabs/php_codesniffer": "^3.7",
+    "symplify/easy-coding-standard": "^12.0"
   }
 }
