--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "imedge/icinga-perf-data": ">=0.5",
     "imedge/json": ">=0.1",
     "imedge/log": ">=0.7",
+    "imedge/node-provided-libs": "^0.9.0",
     "imedge/rrd-graph-info": ">=0.3",
     "imedge/rrd-structure": ">=0.4",
     "imedge/rrdcached": ">=0.4",
